force-app/main/default/objects/Merchandise__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Stores details about the merchandise.</description>
    <inlineHelpText>Enter a brief description of the merchandise.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>