force-app/main/default/objects/Merchandise__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>Stores the selling price of the merchandise.</description>
    <inlineHelpText>Enter the selling price of the merchandise.</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>